--- a/Portfolio 1.0/index.html
+++ b/Portfolio 1.0/index.html
@@ -75,11 +75,11 @@
                         <p class="text-muted card-text mb-2">Linkedin</p>
                         <script>
                             function myFunction2() {
-                                location.replace("https://www.facebook.com/theyashsisodiya")
+                                location.replace("https://www.linkedin.com/in/theyashsisodiya")
                             }
                         </script>
                     </div>
-                    <div onclick="myFunction2()"
+                    <!--<div onclick="myFunction2()"
                         class="card-body text-center d-flex flex-column align-items-center p-0"><img
                             class="rounded-circle mb-3 fit-cover" width="130" height="130" src="assets/img/facebook.png"
                             style="width: 100px;">
@@ -92,7 +92,7 @@
                                 location.replace("https://www.facebook.com/theyashsisodiya")
                             }
                         </script>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col">
@@ -110,7 +110,7 @@
                             }
                         </script>
                     </div>
-                    <div onclick="myFunction4()"
+                 <!--   <div onclick="myFunction4()"
                         class="card-body text-center d-flex flex-column align-items-center p-0"><img
                             class="rounded-circle mb-3 fit-cover" width="130" height="130"
                             src="assets/img/whatsapp.png">
@@ -121,7 +121,7 @@
                                 location.replace("https://api.whatsapp.com/send/?phone=%2B917389022061")
                             }
                         </script>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="col">
