--- a/Portfolio 1.0/index.html
+++ b/Portfolio 1.0/index.html
@@ -44,7 +44,9 @@
         <div #round3 { border: 2px solid red; border-radius: 12px; margin-right:600px; padding: 5px; }
             class="row gy-4 row-cols-2 row-cols-md-4" style="height: 480px;">
             <div class="col">
-                <div onclick="myFunction()" class="card border-0 shadow-none">
+                <a href="https://www.instagram.com/theyashsisodiya">
+                <!-- <div onclick="myFunction()"  -->
+                    <div     class="card border-0 shadow-none">
                     <div class="card-body text-center d-flex flex-column align-items-center p-0">
                         <img class="rounded-circle mb-3 fit-cover" width="130" height="130"
                             src="assets/img/instagram.png" />
@@ -55,30 +57,33 @@
                                     @theyashsisodiya</span> </strong>
                         </h5>
                         <p class="text-muted card-text mb-2">instagram</p>
-                        <script>
+                        <!-- <script>
                             function myFunction() {
                                 location.replace("https://www.instagram.com/theyashsisodiya")
                             }
-                        </script>
+                        </script> -->
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col">
                 <div class="card border-0 shadow-none">
-                    <div onclick="myFunction2()"
-                        class="card-body text-center d-flex flex-column align-items-center p-0"><img
+                    <a href="https://www.linkedin.com/in/theyashsisodiya">
+                    <!-- <div onclick="myFunction2()" -->
+                        <div class="card-body text-center d-flex flex-column align-items-center p-0"><img
                             class="rounded-circle mb-3 fit-cover" width="130" height="130" src="assets/img/linkedin.png"
                             style="width: 100px;">
                         <h5 class="fw-bold text-primary card-title mb-0"><strong><span
                                     style="color: rgba(var(--bs-primary-rgb),var(--bs-text-opacity)) ;">@theyashsisodiya</span></strong><br>
                         </h5>
                         <p class="text-muted card-text mb-2">Linkedin</p>
-                        <script>
+                        <!-- <script>
                             function myFunction2() {
                                 location.replace("https://www.linkedin.com/in/theyashsisodiya")
                             }
-                        </script>
+                        </script> -->
                     </div>
+                    </a>
                     <!--<div onclick="myFunction2()"
                         class="card-body text-center d-flex flex-column align-items-center p-0"><img
                             class="rounded-circle mb-3 fit-cover" width="130" height="130" src="assets/img/facebook.png"
@@ -97,19 +102,21 @@
             </div>
             <div class="col">
                 <div class="card border-0 shadow-none">
-                    <div onclick="myFunction3()"
-                        class="card-body text-center d-flex flex-column align-items-center p-0"><img
+                    <a href="https://www.github.com/theyashsisodiya">
+                    <!-- <div onclick="myFunction3()" -->
+                        <div    class="card-body text-center d-flex flex-column align-items-center p-0"><img
                             class="rounded-circle mb-3 fit-cover" width="130" height="130" src="assets/img/github.png">
                         <h5 class="fw-bold text-primary card-title mb-0"><strong><span
                                     style="color: rgba(var(--bs-primary-rgb),var(--bs-text-opacity)) ;">@theyashsisodiya</span></strong><br>
                         </h5>
                         <p class="text-muted card-text mb-2">Github</p>
-                        <script>
+                        <!-- <script>
                             function myFunction3() {
                                 location.replace("https://www.github.com/theyashsisodiya")
                             }
-                        </script>
+                        </script> -->
                     </div>
+                    </a>
                  <!--   <div onclick="myFunction4()"
                         class="card-body text-center d-flex flex-column align-items-center p-0"><img
                             class="rounded-circle mb-3 fit-cover" width="130" height="130"
@@ -126,19 +133,23 @@
             </div>
             <div class="col">
                 <div class="card border-0 shadow-none">
-                    <div onclick="myFunction5()"
+                    <a href="https://twitter.com/theyashsisodiya">
+                        
+                    <!-- <div onclick="myFunction5()" -->
+                        <div
                         class="card-body text-center d-flex flex-column align-items-center p-0"><img
                             class="rounded-circle mb-3 fit-cover" width="130" height="130" src="assets/img/twitter.png">
                         <h5 class="fw-bold text-primary card-title mb-0"><strong><span
                                     style="color: rgba(var(--bs-primary-rgb),var(--bs-text-opacity)) ;">@theyashsisodiya</span></strong><br>
                         </h5>
                         <p class="text-muted card-text mb-2">Twitter</p>
-                        <script>
+                        <!-- <script>
                             function myFunction5() {
                                 location.replace("https://twitter.com/theyashsisodiya")
                             }
-                        </script>
+                        </script> -->
                     </div>
+                    </a>
                 </div>
             </div>
         </div>
